[package]
name = "bibe-asm-proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
bibe-instr = { path = "../bibe-instr" }
bibe-asm = { path = "../bibe-asm" }
nom = "7.1.3"
quote = "1.0.23"
proc-macro2 = "1.0.51"